--- a/backend/package.json
+++ b/backend/package.json
@@ -9,5 +9,8 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
+  },
+  "scripts": {
+    "dev": "nodemon src/index.js"
   }
 }
